// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox default Module not found (empty import trace) 1`] = `
"./pages/index.js:1:0
Module not found: Can't resolve 'b'
> 1 | import Comp from 'b'
  2 |       export default function Oops() {
  3 |         return (
  4 |           <div>

https://nextjs.org/docs/messages/module-not-found"
`;

exports[`ReactRefreshLogBox default Module not found (missing global CSS) 1`] = `
"./pages/_app.js:2:8
Module not found: Can't resolve './non-existent.css'
  1 | 
> 2 |         import './non-existent.css'
    |        ^
  3 | 
  4 |         export default function App({ Component, pageProps }) {
  5 |           return <Component {...pageProps} />

https://nextjs.org/docs/messages/module-not-found"
`;

exports[`ReactRefreshLogBox default Module not found 1`] = `
"./index.js:1:0
Module not found: Can't resolve 'b'
> 1 | import Comp from 'b'
  2 |       export default function Oops() {
  3 |         return (
  4 |           <div>

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./pages/index.js"
`;

exports[`ReactRefreshLogBox default Node.js builtins 1`] = `
"./node_modules/my-package/index.js:2:0
Module not found: Can't resolve 'dns'

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./index.js
./pages/index.js"
`;
